10. Kubernetes/K8s_Notes/5. Security-LimitPrivilages/3. Network Policies/Allow-DNS+Block-All-Other-Egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  namespace: app
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53


# Allow pods to resolve DNS, but prevent any other outbound connection.
# Pods can reach kube-dns for name resolution (port 53/UDP).
# All other egress blocked — no outside internet!
